Patients api documentation
